Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>mcjudd // homepage by mcjudd</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>mcjudd // homepage</h1>
+        <p></p>
+
+
+        <p class="view"><a href="https://github.com/mcjudd">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h2>
+<a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my homepage.</h2>
+
+<p>I plan to use this space to write about things I'm learning.  </p>
+
+<h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me</h3>
+
+<p>I earned a Masters of Public Health in Global Epidemiology at Emory University's Rollins School of Public Health. I currently work in foodborne disease surveillance at the CDC.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
