--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@ title: mcjudd
 <section>
 	<h2>Post archive</h2>
 	<ul id="archive">
-		{% for post in site.posts %}
-		<li class="post-{{ post.category }}">
-			{% if post.external_url == nil %}
-			<a href="{{ post.url }}">{{ post.title }}</a> <abbr>{{ post.date | date_to_string }}</abbr>
-			{% else %}
-			<a href="{{ post.external_url }}">{{ post.title }}</a> <abbr>{{ post.date | date_to_string }}</abbr>
-			{% endif %}
-		</li>
-		{% endfor %}
-	</ul>
-</section>
+		<ul class="posts">
+			{% for post in site.posts %}
+			<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+			{% endfor %}
+		</ul>
+	</section>
