--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: mcjudd
 </section>
 
 <section>
-	<h2>Post archive</h2>
+	<h2>Blog posts</h2>
 	<ul id="archive">
 		<ul class="posts">
 			{% for post in site.posts %}
