--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@ title: mcjudd
 
 <section>
 	<h2>Blog posts</h2>
-	<ul id="archive">
-		<ul class="posts">
+	<p id="archive">
+		<p class="posts">
 			{% for post in site.posts %}
-			<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-			{% endfor %}
-		</ul>
-	</section>
+			<span>
+				{{ post.date | date_to_string }}
+			</span> 
+			&raquo; <a href="{{ post.url }}">
+			{{ post.title }}
+		</a>
+	</p>
+	{% endfor %}
+</p>
+</section>
